Attempting to fix white space issue below footer. Issue shows up on phone but not chrome dev tools.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
-#root{
-  box-sizing: border-box;
-}
-
-body, html {
+* {
   padding: 0;
   margin: 0;
-};
+  box-sizing: border-box;
+}
